# 4sem

./: README.md
forcelines/: CMakeLists.txt  main.cpp  vec2.cpp  vec2.h
victor/: CMakeLists.txt  main.cpp
